Fix Check Mark on Category Grid List Alignment

--- a/src/app/notification-form/notification-form.component.scss
+++ b/src/app/notification-form/notification-form.component.scss
@@ -44,7 +44,7 @@
     display: none;
     font-size: 16px;
 
-    @include set-position(absolute, $top: -6px, $right: -12px);
+    @include set-position(absolute, $top: -6px, $right: -13px);
   }
 
   .mat-icon:last-child {
